--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -36,11 +36,13 @@ jobs:
         run: |
           if [ -f "${{ github.workspace }}/yarn.lock" ]; then
             echo "manager=yarn" >> $GITHUB_OUTPUT
+            echo "tester=yarn" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
             echo "runner=yarn" >> $GITHUB_OUTPUT
             exit 0
           elif [ -f "${{ github.workspace }}/package.json" ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
+            echo "tester=npm run" >> $GITHUB_OUTPUT
             echo "command=ci" >> $GITHUB_OUTPUT
             echo "runner=npx --no-install" >> $GITHUB_OUTPUT
             exit 0
@@ -76,9 +78,9 @@ jobs:
       - name: Run Linter
         run: ${{ steps.detect-package-manager.outputs.runner }} next lint
       - name : Run Tests
-        run: ${{ steps.detect-package-manager.outputs.runner }} next test
+        run: ${{ steps.detect-package-manager.outputs.tester }} test
       - name: Test Coverage
-        run: ${{ steps.detect-package-manager.outputs.runner }} next test --coverage
+        run: ${{ steps.detect-package-manager.outputs.tester }} test:coverage
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
